2004-01-24  Paolo Borelli  <pborelli@katamail.com>

	* callbacks.[ch] (cb_tree_popup_menu): handle the popup_menu signal.
	(cb_tree_row_activated): use the activate-row signal instead of 
	manually checking for double click.
	* interface.c (do_popup_menu): update for the above changes.
	* proctable.c (proctable_new): connect the callbacks.

2004-01-07  Glynn Foster  <glynn.foster@sun.com>

	* interface.c: (create_main_window): remove _with_mnemonic when it's 
	not being used for that purpose.
	* procdialogs.c: (procdialog_create_preferences_dialog): remove 
	_with_mnemonic when it's not being used for that purpose. Fixes #130666.

2003-11-26  Kevin Vandersloot 

	* interface.c, load-graph.c, procman.c: Add support for smp
	systems. Should fix bug #91363
	
	* proctable.c: allow the columns to be shrunk to any size regardless
	of the colum label

2003-11-16  Havoc Pennington  <hp@redhat.com>

	* proctable.c: display X Server Memory column, and add it to 
	the overall Memory column

	* procman.h (struct _ProcInfo): add xserver_bytes field
	(struct _ProcInfo): add memxserver field

2003-11-14  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* src/callbacks.c (cb_cpu_color_changed), 
	(cb_mem_color_changed), (cb_swap_color_changed):
	Changed the format for r,g,b to print as 4 digits 
	each, to ensure 'color' gets the correct code.
	Fixes bug #126612.

2003-11-22  Kevin Vandersloot

	* util.c, procdialogs.c: Fix hang when entering root password. Patch from
	Kiran Kumar Immidi. Fixes bug #126923

2003-11-19  Kevin Vandersloot

	* load-graph.c: Fix the memory display to display the correct memory usage
	given from libgtop.

2003-11-08  Kevin Vandersloot

	* load-graph.c: Fix the cpu graph showing initial values of zero. Fixes
	bug #119107

2003-11-08  Kevin Vandersloot

	* Makefile.am: remove DISABL_DEPRECATED flags to fix build on
	newer gtk's.

2003-09-21  Dennis Cranston <dennis_cranston at yahoo com>
	
	* procdialogs.c: Apply HIG fixes for the Preferences, Change 