@@ -1,3 +1,10 @@
+2004-02-03  Paolo Borelli  <pborelli@katamail.com>
+
+	* callbacks.[ch] (cb_proc_combo_changed): new.
+	* interface.c (create_proc_view): port from optionmenu to combo.
+	* procman.h: update enum.
+	* proctable.c: update for the above.
+
 2004-01-24  Paolo Borelli  <pborelli@katamail.com>
 
 	* callbacks.[ch] (cb_tree_popup_menu): handle the popup_menu signal.
